fix: align navbar borders well #443

--- a/wiki/public/scss/navbar.scss
+++ b/wiki/public/scss/navbar.scss
@@ -21,7 +21,6 @@
   position: sticky;
   top: 0;
   z-index: 5;
-  height: 60px;
   position: relative;
 
   @media (max-width: 768px) {
